--- a/cmd/web/templates/base.layout.gohtml
+++ b/cmd/web/templates/base.layout.gohtml
@@ -1,6 +1,6 @@
 {{define "base"}}
 <!doctype html>
-<html lang="ar" dir="rtl">
+<html lang="en">
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
