form connect to stripe

--- a/cmd/web/templates/terminal.page.gohtml
+++ b/cmd/web/templates/terminal.page.gohtml
@@ -47,8 +47,42 @@
     <script src="https://js.stripe.com/v3/"></script>
 
     <script>
+        let card;
+        let stripe;
+
+        stripe = Stripe('pk_test_51KvieLC0SQkZFCmUOGmhBU0d8ctUGLE93pKI5iA5oVYKZvRtbWDBauzNDc9augCuQDS5Vk745nFDAGw2wiY7DCXW000vL2Y2mT');
         function val() {
 
         }
+
+        (function() {
+            // create stripe & elements
+            const elements = stripe.elements();
+            const style = {
+                base: {
+                    fontSize: '16px',
+                    lineHeight: '24px'
+                }
+            };
+
+            // create card entry
+            card = elements.create('card', {
+                style: style,
+                hidePostalCode: true,
+            });
+            card.mount("#card-element");
+
+            // check for input errors
+            card.addEventListener('change', function (event) {
+                const displayError = document.getElementById("card-errors");
+                if (event.error) {
+                    displayError.classList.remove('d-none');
+                    displayError.textContent = event.error.message;
+                } else {
+                    displayError.classList.add('d-none');
+                    displayError.textContent = '';
+                }
+            })
+        })();
     </script>
 {{end}}
