--- a/cmd/web/templates/terminal.page.gohtml
+++ b/cmd/web/templates/terminal.page.gohtml
@@ -8,6 +8,8 @@
     <h2 class="mt-3 text-center">Virtual Terminal</h2>
     <hr>
 
+        <div class="alert alert-danger text-center d-none" id="card-messages"></div>
+
     <form action="/payment-succeeded" method="post"
         name="charge_form" id="charge_form" class="d-block needs-validation charge-form" autocomplete="off" novalidate>
         <div class="mb-3">
@@ -27,7 +29,6 @@
             <input type="text" class="form-control" id="cardholder-email" name="cardholder_email"
                    required="" autocomplete="cardholder-email-new">
         </div>
-        <!-- card number will be built by stripe -->
 
         <div class="mb-3">
             <label for="card-element" class="form-label">Credit Card</label>
@@ -39,7 +40,12 @@
         <hr>
 
         <a id="pay-button" href="javascript:void(0)" class="btn btn-primary" onclick="val()">Charge Card</a>
-        
+        <div id="processing-payment" class="text-center d-none">
+            <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+
     </form>
 {{end}}
 
@@ -49,10 +55,19 @@
     <script>
         let card;
         let stripe;
+        const cardMessages = document.getElementById("card-messages");
+        const payButton = document.getElementById("pay-button");
+        const processing = document.getElementById("processing-payment");
 
         stripe = Stripe('pk_test_51KvieLC0SQkZFCmUOGmhBU0d8ctUGLE93pKI5iA5oVYKZvRtbWDBauzNDc9augCuQDS5Vk745nFDAGw2wiY7DCXW000vL2Y2mT');
         function val() {
-
+            let form = document.getElementById("charge_form");
+            if (form.checkValidity() === false) {
+                this.event.preventDefault();
+                this.event.stopPropagation();
+                form.classList.add("was-validated");
+            }
+            form.classList.add("was-validated");
         }
 
         (function() {
