add payment-intent backend

--- a/cmd/web/templates/terminal.page.gohtml
+++ b/cmd/web/templates/terminal.page.gohtml
@@ -60,14 +60,22 @@
         const processing = document.getElementById("processing-payment");
 
         stripe = Stripe('pk_test_51KvieLC0SQkZFCmUOGmhBU0d8ctUGLE93pKI5iA5oVYKZvRtbWDBauzNDc9augCuQDS5Vk745nFDAGw2wiY7DCXW000vL2Y2mT');
+
+        function hidePayButton() {
+            payButton.classList.add("d-none");
+            processing.classList.remove("d-none");
+        }
+
         function val() {
             let form = document.getElementById("charge_form");
             if (form.checkValidity() === false) {
                 this.event.preventDefault();
                 this.event.stopPropagation();
                 form.classList.add("was-validated");
+                return;
             }
             form.classList.add("was-validated");
+            hidePayButton()
         }
 
         (function() {
