moving a js to a reusable script

--- a/cmd/web/templates/buy-once.page.gohtml
+++ b/cmd/web/templates/buy-once.page.gohtml
@@ -52,4 +52,8 @@
         <input type="hidden" name="payment_currency" id="payment_currency">
 
     </form>
+
+{{end}}
+{{define "js"}}
+    {{template "stripe-js" .}}
 {{end}}
